web-app/src/styles.scss
// Include theming for Angular Material with `mat.theme()`.
// This Sass mixin will define CSS variables that are used for styling Angular Material
// components according to the Material 3 design spec.
// Learn more about theming and how to use it for your application's
// custom components at https://material.angular.dev/guide/theming
@use '@angular/material' as mat;

html {
  @include mat.theme((
    color: (
      primary: mat.$azure-palette,
      tertiary: mat.$blue-palette,
    ),
    typography: Roboto,
    density: 0,
  ));

  // Disable automatic font size adjustment
  -webkit-text-size-adjust: 100%;

  // Overrides
  --mat-sys-surface: light-dark(#faf9fd, #050714);
  // 0b0f2a

  --app-container-width: 1280px;
}

body {
  color-scheme: light dark;

  // Set a default background, font and text colors for the application using
  // Angular Material's system-level CSS variables. Learn more about these
  // variables at https://material.angular.dev/guide/system-variables
  background-color: var(--mat-sys-surface);
  color: var(--mat-sys-on-surface);
  font: var(--mat-sys-body-medium);

  // Reset the user agent margin.
  margin: 0;
}

body.dark-mode {
  color-scheme: dark;
}

body.light-mode {
  color-scheme: light;
}

html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

.toggle-buttons {
  padding: 0 8px 8px 8px;
}

mat-toolbar {
  @include mat.toolbar-overrides((
    standard-height: 48px
  ));

  box-shadow: 0 6px 8px rgba(149, 149, 149, 0.3);
}

a {
  text-decoration: none;
  color: var(--mat-sys-on-surface);
}

// Styles for the settings menu in the player component.
.playback-settings-menu {
  mat-slide-toggle {
    padding-left: 12px;
  }

  .mat-mdc-menu-item-text {
    display: flex;
    align-items: center;
  }

  .font-size, .playback-speed {
    span.value {
      padding: 0 8px;
      width: 30px;
    }
  }
}

.error-snackbar .mat-mdc-snackbar-surface {
  background-color: #ffc5c1 !important;
}

